traces/bug_759.txt
examples++-load/Element_Mixte.cpp:1422: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::Elm__TypeOfFE_RT1_2dOrtho accesses global variable from a different translation unit: map_type|.
Showing all 5 steps of the trace


examples++-load/Element_Mixte.cpp:1422:5: initialization of Fem2D::Elm__TypeOfFE_RT1_2dOrtho
1420.       static AddNewFE FE__TD_NNS1("TDNNS1",&Elm_TD_NNS1);     
1421.       static AddNewFE Elm__TypeOfFE_RT1_2d("RT1",&Elm_TypeOfFE_RT1_2d); 
1422.       static AddNewFE Elm__TypeOfFE_RT1_2dOrtho("RT1Ortho",&Elm_TypeOfFE_RT1_2dOrtho);
            ^
1423.       
1424.       static AddNewFE Elm__TypeOfFE_RT2_2d("RT2",&Elm_TypeOfFE_RT2_2d);

examples++-load/Element_Mixte.cpp:1422:21: call to AddNewFE_AddNewFE
1420.       static AddNewFE FE__TD_NNS1("TDNNS1",&Elm_TD_NNS1);     
1421.       static AddNewFE Elm__TypeOfFE_RT1_2d("RT1",&Elm_TypeOfFE_RT1_2d); 
1422.       static AddNewFE Elm__TypeOfFE_RT1_2dOrtho("RT1Ortho",&Elm_TypeOfFE_RT1_2dOrtho);
                            ^
1423.       
1424.       static AddNewFE Elm__TypeOfFE_RT2_2d("RT2",&Elm_TypeOfFE_RT2_2d);

src/fflib/AddNewFE.h:52:34: call to atype<Fem2D::TypeOfFE_*>
  50.     {
  51.       ffassert(tfe); // check 
  52.       Global.New(FEname, Type_Expr(atype<Fem2D::TypeOfFE*>() ,new  EConstantTypeOfFE(tfe)));
                                         ^
  53.     }
  54.   };

src/fflib/AFunction.hpp:339:14: call to ShowType
    337.    // basicForEachType * r=map_type[];
    338.     if (ir == map_type.end()) { cerr << "Error: aType  '" << typeid(T).name() << "', doesn't exist\n";
    339.                ShowType(cerr);
                        ^
    340.               throw(ErrorExec("exit",1));}
    341.     return ir->second;}

src/fflib/AFunction2.cpp:708:10: access to map_type|
    706.    
    707.      map<const string,basicForEachType *>::const_iterator i;
    708.      for(i=map_type.begin();i!=map_type.end();i++)
                    ^
    709.        {
    710.          f << " --"<< i->first <<" = " ; 
